tests/fixtures/invalid/str_in_int.py
# Cannot use 'in' with Str and Int
x: bool = "hello" in 1
